--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -197,11 +197,12 @@
         font-size: 18px;
         font-weight: 500;
         border: none;
-        color: #413f3f;
+        color: #000000;
         cursor: pointer;
+        background: none;
 
         &:hover {
-          background-color: #f5f5f5;
+          background-color: #ffffff;
           background: rgb(176, 169, 169);
         }
       }
@@ -477,7 +478,7 @@
     }
 
     .search {
-      display: none;
+      display: block;
     }
 
     .language {
