--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -34,7 +34,7 @@
     color: #fff;
     gap: 10px;
     h1 {
-      font-size: 48px !important;
+      font-size: 48px;
       font-weight: 700;
     }
 
@@ -71,13 +71,13 @@
       display: flex;
       justify-content: center;
       img {
-        top: -200 !important;
-        width: 200px !important;
-        height: 200px !important;
+        top: -200;
+        width: 200px;
+        height: 200px;
       }
     }
     .subtext {
-      padding: 170px !important;
+      padding: 170px;
     }
   }
 }
@@ -88,25 +88,25 @@
       display: flex;
       justify-content: center;
       img {
-        top: -130 !important;
-        width: 150px !important;
-        height: 150px !important;
+        top: -130;
+        width: 150px;
+        height: 150px;
       }
     }
     .text {
       padding: 0;
       text-align: center;
       h1 {
-        font-size: 26px !important;
-        padding-top: 10px !important;
+        font-size: 26px;
+        padding-top: 10px;
       }
       h2 {
-        font-size: 20px !important;
+        font-size: 20px;
       }
     }
 
     .subtext {
-      padding: 110px !important;
+      padding: 110px;
     }
   }
 }
@@ -117,24 +117,24 @@
       display: flex;
       justify-content: center;
       img {
-        top: -74 !important;
-        width: 100px !important;
-        height: 100px !important;
+        top: -74;
+        width: 100px;
+        height: 100px;
       }
     }
     .text {
-      padding-top: 20px !important;
+      padding-top: 20px;
 
       h1 {
-        font-size: 20px !important;
+        font-size: 20px;
       }
       h2 {
-        font-size: 16px !important;
+        font-size: 16px;
       }
     }
 
     .subtext {
-      padding: 88px !important;
+      padding: 88px;
     }
   }
 }
@@ -157,13 +157,13 @@
       display: flex;
       justify-content: center;
       img {
-        top: -240;
+        top: -100px;
         width: 200px;
         height: 200px;
       }
     }
 
-    .subtext {
+    .text {
       padding: 190px;
     }
   }
