--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -54,33 +54,33 @@
 }
 
 /* Tablet view */
-@media (max-width: 768px) {
-  #content {
-    .text {
-      padding: 0;
-      text-align: center;
-      h1 {
-        font-size: 30px;
-      }
+// @media (max-width: 768px) {
+//   #content {
+//     .text {
+//       padding: 0;
+//       text-align: center;
+//       h1 {
+//         font-size: 30px;
+//       }
 
-      h2 {
-        font-size: 24px;
-      }
-    }
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -150px;
-        width: 130px;
-        height: 130px;
-      }
-    }
-    .subtext {
-      padding: 110px;
-    }
-  }
-}
+//       h2 {
+//         font-size: 24px;
+//       }
+//     }
+//     .profileImage {
+//       display: flex;
+//       justify-content: center;
+//       img {
+//         top: -150px;
+//         width: 130px;
+//         height: 130px;
+//       }
+//     }
+//     .subtext {
+//       padding: 110px;
+//     }
+//   }
+// }
 
 @media (max-width: 430px) {
   #content {
@@ -88,7 +88,7 @@
       display: flex;
       justify-content: center;
       img {
-        top: -130;
+        top: -130px;
         width: 150px;
         height: 150px;
       }
