--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -9,6 +9,7 @@
     position: absolute;
     bottom: 25px;
     z-index: 2;
+    width: 100%;
   }
 
   .profileImage {
@@ -16,9 +17,12 @@
     align-items: center;
     gap: 20px;
     position: relative;
+
     img {
       position: absolute;
-      top: -10;
+      top: -10px;
+      left: 50%;
+      transform: translateX(-50%);
       border: 4px solid #fff;
       border-radius: 50%;
       width: 200px;
@@ -27,12 +31,13 @@
   }
 
   .text {
-    padding-top: 150px;
-    padding-left: 200px;
+    padding-top: 220px;
     display: flex;
     flex-direction: column;
     color: #fff;
     gap: 10px;
+    text-align: center;
+
     h1 {
       font-size: 48px;
       font-weight: 700;
@@ -53,122 +58,121 @@
   }
 }
 
-/* Tablet view */
-// @media (max-width: 768px) {
-//   #content {
-//     .text {
-//       padding: 0;
-//       text-align: center;
-//       h1 {
-//         font-size: 30px;
-//       }
-
-//       h2 {
-//         font-size: 24px;
-//       }
-//     }
-//     .profileImage {
-//       display: flex;
-//       justify-content: center;
-//       img {
-//         top: -150px;
-//         width: 130px;
-//         height: 130px;
-//       }
-//     }
-//     .subtext {
-//       padding: 110px;
-//     }
-//   }
-// }
-
-@media (max-width: 430px) {
-  #content {
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -130px;
-        width: 150px;
-        height: 150px;
-      }
-    }
-    .text {
-      padding: 0;
-      text-align: center;
-      h1 {
-        font-size: 26px;
-        padding-top: 10px;
-      }
-      h2 {
-        font-size: 20px;
-      }
-    }
-
-    .subtext {
-      padding: 110px;
-    }
-  }
-}
-
-@media (max-width: 320px) {
-  #content {
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -74;
-        width: 100px;
-        height: 100px;
-      }
-    }
-    .text {
-      padding-top: 20px;
-
-      h1 {
-        font-size: 20px;
-      }
-      h2 {
-        font-size: 16px;
-      }
-    }
-
-    .subtext {
-      padding: 88px;
-    }
-  }
-}
-
 /* Larger screens */
 @media (max-width: 884px) {
   #content {
     .text {
       padding: 20px;
       text-align: center;
+
       h1 {
-        font-size: 56px;
+        font-size: 42px;
       }
+
       h2 {
-        font-size: 38px;
+        font-size: 28px;
       }
     }
 
     .profileImage {
-      display: flex;
-      justify-content: center;
       img {
         top: -180px;
-        width: 180px;
-        height: 180px;
+        width: 160px;
+        height: 160px;
+      }
+    }
+
+    .subtext {
+      padding: 140px;
+    }
+  }
+}
+
+/* Tablet view */
+@media (max-width: 768px) {
+  #content {
+    .text {
+      padding: 0;
+      text-align: center;
+
+      h1 {
+        font-size: 36px;
+      }
+
+      h2 {
+        font-size: 24px;
+      }
+    }
+
+    .profileImage {
+      img {
+        top: -150px;
+        width: 140px;
+        height: 140px;
+      }
+    }
+
+    .subtext {
+      padding: 120px;
+    }
+  }
+}
+
+/* Mobile view */
+@media (max-width: 430px) {
+  #content {
+    .profileImage {
+      img {
+        top: -130px;
+        width: 120px;
+        height: 120px;
       }
     }
 
     .text {
-      padding: 10px;
+      padding: 0;
+
+      h1 {
+        font-size: 24px;
+        padding-top: 10px;
+      }
+
+      h2 {
+        font-size: 18px;
+      }
     }
 
     .subtext {
-      padding: 170px;
+      padding: 100px;
+    }
+  }
+}
+
+/* Small mobile view */
+@media (max-width: 320px) {
+  #content {
+    .profileImage {
+      img {
+        top: -74px;
+        width: 100px;
+        height: 100px;
+      }
+    }
+
+    .text {
+      padding-top: 40px;
+
+      h1 {
+        font-size: 20px;
+      }
+
+      h2 {
+        font-size: 16px;
+      }
+    }
+
+    .subtext {
+      padding: 80px;
     }
   }
 }
