--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -9,7 +9,6 @@
     position: absolute;
     bottom: 25px;
     z-index: 2;
-    width: 100%;
   }
 
   .profileImage {
@@ -17,12 +16,9 @@
     align-items: center;
     gap: 20px;
     position: relative;
-
     img {
       position: absolute;
-      top: -10px;
-      left: 50%;
-      transform: translateX(-50%);
+      top: -10;
       border: 4px solid #fff;
       border-radius: 50%;
       width: 200px;
@@ -31,13 +27,12 @@
   }
 
   .text {
-    padding-top: 220px;
+    padding-top: 150px;
+    padding-left: 200px;
     display: flex;
     flex-direction: column;
     color: #fff;
     gap: 10px;
-    text-align: center;
-
     h1 {
       font-size: 48px;
       font-weight: 700;
@@ -57,122 +52,121 @@
     padding: 96px;
   }
 }
-
 /* Larger screens */
 @media (max-width: 884px) {
   #content {
     .text {
       padding: 20px;
       text-align: center;
-
       h1 {
-        font-size: 42px;
+        font-size: 56px;
       }
-
       h2 {
-        font-size: 28px;
+        font-size: 38px;
       }
     }
 
     .profileImage {
+      display: flex;
+      justify-content: center;
       img {
         top: -180px;
-        width: 160px;
-        height: 160px;
+        width: 180px;
+        height: 180px;
       }
     }
 
+    .text {
+      padding: 10px;
+    }
+
     .subtext {
-      padding: 140px;
+      padding: 170px;
     }
   }
 }
-
 /* Tablet view */
 @media (max-width: 768px) {
   #content {
     .text {
       padding: 0;
       text-align: center;
-
       h1 {
-        font-size: 36px;
+        font-size: 50px;
       }
 
       h2 {
         font-size: 24px;
       }
     }
-
     .profileImage {
+      display: flex;
+      justify-content: center;
       img {
-        top: -150px;
-        width: 140px;
-        height: 140px;
+        top: -180px;
+        width: 180px;
+        height: 180px;
       }
     }
-
     .subtext {
-      padding: 120px;
+      padding: 170px;
     }
   }
 }
 
-/* Mobile view */
 @media (max-width: 430px) {
   #content {
     .profileImage {
+      display: flex;
+      justify-content: center;
       img {
-        top: -130px;
-        width: 120px;
-        height: 120px;
+        top: -130;
+        width: 150px;
+        height: 150px;
       }
     }
-
     .text {
       padding: 0;
-
+      text-align: center;
       h1 {
-        font-size: 24px;
+        font-size: 26px;
         padding-top: 10px;
       }
-
       h2 {
-        font-size: 18px;
+        font-size: 20px;
       }
     }
 
     .subtext {
-      padding: 100px;
+      padding: 110px;
     }
   }
 }
 
-/* Small mobile view */
 @media (max-width: 320px) {
   #content {
     .profileImage {
+      display: flex;
+      justify-content: center;
       img {
-        top: -74px;
+        top: -74;
         width: 100px;
         height: 100px;
       }
     }
-
     .text {
-      padding-top: 40px;
+      padding-top: 20px;
 
       h1 {
         font-size: 20px;
       }
-
       h2 {
         font-size: 16px;
       }
     }
 
     .subtext {
-      padding: 80px;
+      padding: 88px;
     }
   }
 }
