--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -39,6 +39,10 @@
       display: block;
     }
 
+    .disp {
+      display: none;
+    }
+
     ul {
       list-style: none;
       display: flex;
@@ -50,7 +54,7 @@
 
         a {
           display: block;
-          padding: 8px;
+          padding: 10px;
           color: #fff;
           text-decoration: none;
           font-weight: 500;
@@ -72,22 +76,22 @@
 
     input {
       padding: 10px;
-      width: 200px;
+      width: 100px;
       border: 2px solid #fff;
-      border-radius: 20px;
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
+      border-right: none;
       font-size: 14px;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
+      background: #ffffff77;
       outline: none;
-      transition: all 0.3s ease;
 
       &:focus {
-        background: rgba(255, 255, 255, 0.3);
-        width: 220px;
+        background: transparent;
+        color: #fff;
       }
 
       &::placeholder {
-        color: rgba(255, 255, 255, 0.7);
+        color: #fff;
       }
     }
   }
@@ -138,6 +142,21 @@
       }
     }
 
+    .profileButton {
+      background: none;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1rem;
+      padding: 0;
+      margin: 0;
+      font-weight: 500;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
     .profileImage {
       cursor: pointer;
       width: 40px;
@@ -163,6 +182,7 @@
       top: 47px;
       right: 0;
       width: 160px;
+      height: 100px;
       background-color: white;
       border: 1px solid #ddd;
       border-radius: 4px;
@@ -182,74 +202,9 @@
         background: none;
 
         &:hover {
-          background-color: #f5f5f5;
+          background-color: #ffffff;
+          background: rgb(176, 169, 169);
         }
-      }
-    }
-  }
-}
-
-@media (max-width: 1024px) {
-  .header {
-    background: rgba(77, 44, 94, 0.8);
-
-    .content {
-      flex-wrap: wrap;
-    }
-
-    .hamburger {
-      display: block;
-      font-size: 30px;
-      order: 1;
-    }
-
-    .logo {
-      order: 2;
-    }
-
-    .nav {
-      display: none;
-      width: 100%;
-      order: 5;
-
-      &.active {
-        display: block;
-      }
-
-      ul {
-        flex-direction: column;
-      }
-    }
-
-    .rightSection {
-      order: 3;
-      margin-left: auto;
-    }
-
-    .search {
-      order: 4;
-      width: 100%;
-      margin: 10px 0;
-
-      input {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .header {
-    .language {
-      .bold,
-      .normal {
-        font-size: 14px;
-      }
-    }
-
-    .auth {
-      button {
-        font-size: 14px;
       }
     }
   }
@@ -257,53 +212,340 @@
 
 @media (max-width: 430px) {
   .header {
-    .search {
-      input {
-        font-size: 12px;
+    background: none;
+    position: absolute;
+
+    .nav {
+      background-color: #8b54a77a;
+      display: none;
+      transition: all 0.3s ease-in-out;
+
+      &.active {
+        display: none;
+      }
+      .disp {
+        display: block;
+      }
+
+      &.active {
+        display: block;
+        position: absolute;
+        top: 40px;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        padding: 10px 0;
+      }
+      ul {
+        flex-direction: column;
+        align-items: center;
       }
     }
 
+    .content {
+      padding: 0;
+    }
+
+    .logo {
+      display: none;
+    }
+
     .language {
-      .bold,
+      background: #8b54a77a;
+      border: 1px solid #4d2c5e;
+      color: #fff;
+      border-radius: 8px;
+      padding: 8px 14px;
+
+      .bold {
+        font-size: 18px;
+      }
+
       .normal {
-        font-size: 12px;
-        padding: 3px 6px;
+        font-size: 18px;
       }
     }
 
     .auth {
       button {
-        font-size: 12px;
-        padding: 6px 10px;
+        padding: 10px 24px;
+        border-radius: 10px;
+        font-size: 18px;
       }
+    }
+
+    .hamburger {
+      font-size: 46px;
+      display: flex;
+    }
+
+    .search {
+      display: none;
     }
   }
 }
 
 @media (max-width: 320px) {
   .header {
-    .hamburger {
-      font-size: 24px;
+    background: none;
+
+    .content {
+      padding: 0;
     }
 
-    .search {
-      input {
-        padding: 8px;
+    .nav {
+      a {
+        font-size: 14px;
+      }
+
+      &.active {
+        display: none;
+      }
+      .disp {
+        display: block;
+      }
+    }
+
+    .hamburger {
+      font-size: 36px;
+      display: flex;
+    }
+
+    .logo {
+      display: none;
+    }
+
+    .auth {
+      button {
+        padding: 8px 14px;
+        border-radius: 10px;
+        font-size: 14px;
       }
     }
 
     .language {
-      .bold,
+      background: #8b54a77a;
+      border: 1px solid #4d2c5e;
+      color: #fff;
+      border-radius: 8px;
+      padding: 2px 8px;
+
+      .bold {
+        font-size: 14px;
+      }
+
       .normal {
-        font-size: 10px;
-        padding: 2px 4px;
+        font-size: 14px;
+      }
+    }
+
+    .search {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    background: none;
+
+    .hamburger {
+      display: flex;
+      align-items: center;
+      font-size: 48px;
+      color: #640ea7;
+      cursor: pointer;
+    }
+
+    .search {
+      display: block;
+    }
+
+    .logo {
+      display: none;
+    }
+    .language {
+      background: #8b54a77a;
+      .bold {
+        font-size: 24px;
+      }
+
+      .normal {
+        font-size: 24px;
+      }
+    }
+    .auth {
+      button {
+        font-size: 26px;
+      }
+    }
+
+    .nav {
+      display: none;
+      background: #8b54a7a1;
+      transition: all 0.3s ease-in-out;
+      &.active {
+        display: block;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        padding: 10px 0;
+      }
+
+      &.active {
+        display: none;
+      }
+      .disp {
+        display: block;
+      }
+      a {
+        font-size: 30px;
+      }
+
+      ul {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 0;
+
+        li {
+          padding: 5px 0;
+          border-bottom: 1px solid #fff;
+
+          &:last-child {
+            border-bottom: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 884px) {
+  .header {
+    position: absolute;
+    background: none;
+    .content {
+      align-items: center;
+    }
+
+    .hamburger {
+      display: flex;
+      font-size: 50px;
+    }
+
+    .nav {
+      display: none;
+      background: #8b54a7a1;
+      transition: all 0.3s ease-in-out;
+
+      &.active {
+        display: block;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        padding: 10px 0;
+      }
+
+      &.active {
+        display: none;
+      }
+      .disp {
+        display: block;
+      }
+
+      ul {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 0;
+
+        li {
+          padding: 5px 0;
+          border-bottom: 1px solid #fff;
+
+          &:last-child {
+            border-bottom: none;
+          }
+        }
+      }
+
+      a {
+        font-size: 30px;
+      }
+    }
+
+    .search {
+      display: block;
+    }
+
+    .language {
+      .bold {
+        font-size: 26px;
+      }
+
+      .normal {
+        font-size: 26px;
       }
     }
 
     .auth {
       button {
-        font-size: 10px;
-        padding: 4px 8px;
+        font-size: 26px;
+      }
+    }
+
+    .logo {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .header {
+    position: absolute;
+    background: none;
+    .hamburger {
+      font-size: 50px;
+    }
+
+    .nav {
+      display: none;
+      background: #8b54a7a1;
+      &.active {
+        display: grid;
+      }
+      a {
+        font-size: 20px;
+      }
+    }
+
+    .search {
+      display: none;
+    }
+    .logo {
+      display: none;
+    }
+    .auth {
+      button {
+        font-size: 26px;
+      }
+    }
+    .language {
+      background: #8b54a77a;
+      border: 1px solid #4d2c5e;
+      color: #fff;
+      border-radius: 8px;
+      padding: 2px 8px;
+
+      .bold {
+        font-size: 26px;
+      }
+
+      .normal {
+        font-size: 26px;
       }
     }
   }
