--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -78,17 +78,19 @@
     background-color: #56397bd2;
     padding: 96px;
   }
-
 }
+
 /* Larger screens */
 @media (max-width: 884px) {
   #content {
     .text {
       padding: 20px;
       text-align: center;
+
       h1 {
         font-size: 56px;
       }
+
       h2 {
         font-size: 38px;
       }
@@ -97,6 +99,7 @@
     .profileImage {
       display: flex;
       justify-content: center;
+
       img {
         top: -180px;
         width: 180px;
@@ -104,27 +107,15 @@
       }
     }
 
-    .text {
-      padding: 10px;
-    }
-
     .subtext {
       padding: 170px;
     }
   }
 }
+
 /* Tablet view */
 @media (max-width: 768px) {
   #content {
-    .text {
-      padding: 0;
-      text-align: center;
-      h1 {
-        font-size: 55px;
-      }
-
-  /* Tablet view */
-  @media (max-width: 768px) {
     .text {
       padding: 0;
       text-align: center;
@@ -132,14 +123,6 @@
       h1 {
         font-size: 36px;
       }
-    }
-    .profileImage {
-      display: flex;
-      justify-content: center;
-      img {
-        top: -220px;
-        width: 190px;
-        height: 190px;
 
       h2 {
         font-size: 26px;
@@ -147,6 +130,9 @@
     }
 
     .profileImage {
+      display: flex;
+      justify-content: center;
+
       img {
         top: -150px;
         width: 150px;
@@ -155,19 +141,16 @@
     }
 
     .subtext {
-      padding: 170px;
       padding: 70px;
     }
   }
+}
 
-@media (max-width: 429px) {
+/* Mobile view (small screens) */
+@media (max-width: 430px) {
   #content {
-  @media (max-width: 430px) {
     .profileImage {
       img {
-        top: -140px;
-        width: 130px;
-        height: 130px;
         top: -90px;
         width: 120px;
         height: 120px;
@@ -180,28 +163,25 @@
 
       h1 {
         font-size: 26px;
-        font-size: 26px !important;
         padding-top: 10px;
       }
 
       h2 {
-        font-size: 24px;
         font-size: 20px;
       }
     }
 
     .subtext {
-      padding: 110px;
       padding: 50px;
     }
   }
+}
 
-  @media (max-width: 320px) {
+/* Very small screens */
+@media (max-width: 320px) {
+  #content {
     .profileImage {
       img {
-        top: -74px;
-        width: 90px;
-        height: 90px;
         top: -60px;
         width: 100px;
         height: 100px;
@@ -221,7 +201,6 @@
     }
 
     .subtext {
-      padding: 80px;
       padding: 40px;
     }
   }
