--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -461,7 +461,7 @@
       border: 1px solid #4d2c5e;
       color: #fff;
       border-radius: 8px;
-      padding: 8px 14px;
+      padding: 6px 10px;
 
       .bold {
         font-size: 18px;
@@ -469,6 +469,11 @@
 
       .normal {
         font-size: 18px;
+      }
+
+      .profileImage {
+        width: 50px;
+        height: 50px;
       }
     }
 
@@ -486,7 +491,8 @@
     }
 
     .search {
-      display: none;
+      display: block;
+      border: 1px solid red;
     }
   }
 }
@@ -505,7 +511,7 @@
       }
 
       &.active {
-        display: none;
+        display: block;
       }
       .disp {
         display: block;
