--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -198,8 +198,7 @@
   .GalleryMainContent {
     .content {
       .galleryGrid {
-        overflow-x: auto;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: 1fr;
       }
     }
   }
