--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -165,8 +165,8 @@
     }
 
     .profileInitial {
-      width: 32px;
-      height: 32px;
+      width: 46px;
+      height: 46px;
       border-radius: 50%;
       background-color: #4d2c5e;
       color: white;
@@ -314,7 +314,7 @@
     }
 
     .search {
-      display: block;
+      display: none;
     }
 
     .language {
@@ -352,7 +352,7 @@
     }
 
     .search {
-      display: block;
+      display: none;
     }
 
     .logo {
@@ -491,7 +491,7 @@
     }
 
     .search {
-      display: block;
+      display: none;
       border: 1px solid red;
       border-radius: 2px;
     }
