--- a/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
@@ -75,6 +75,31 @@
         height: 100%;
       }
     }
+
+    .buttonContainer {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .button {
+      width: 100%;
+      max-width: 180px;
+      padding: 16px;
+      background: #6a00a1;
+      border-radius: 16px;
+      color: #fff;
+      font-weight: 400;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      text-align: center;
+
+      &:hover {
+        transform: scale(1.01);
+        transition: transform 0.3s ease;
+      }
+    }
   }
 }
 
@@ -102,10 +127,10 @@
         max-width: 340px;
         height: auto;
         aspect-ratio: 1 / 1;
-            img {
-            width: 100%;
-            height: 100%;
-      }
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -125,9 +150,9 @@
       .image {
         max-width: 280px;
         img {
-            width: 100%;
-            height: 100%;
-      }
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
