--- a/frontend/src/appPages/site/components/pages/home/DirectorContent/DirectorContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/DirectorContent/DirectorContent.module.scss
@@ -36,6 +36,7 @@
     img {
       width: 356px;
       height: 557px;
+      object-fit: cover;
     }
   }
 
@@ -118,7 +119,7 @@
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 576px) {
   .directorContent {
     flex-direction: column;
     .bg2,
@@ -135,7 +136,7 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 430px) {
   .directorContent {
     flex-direction: column;
     .bg2,
@@ -145,9 +146,18 @@
     .title {
       margin-top: 20px;
       text-align: center;
+
+      h1 {
+        font-size: 24px;
+      }
     }
     .image {
       margin-top: 20px;
+
+      img {
+        width: 280px;
+        height: 480px;
+      }
     }
   }
 }
@@ -165,8 +175,8 @@
     }
     .image {
       img {
-        width: 300px;
-        height: 500px;
+        width: 260px;
+        height: 380px;
       }
       margin-top: 20px;
     }
